--- a/rockpaperscissors/styles.css
+++ b/rockpaperscissors/styles.css
@@ -50,23 +50,23 @@ h1 {
   width: 40vw;
   height: 40vw;
   background-size: 100%;
-  background-image: url(../assets/hand_rock.png);
+  background-image: url(hand_rock.png);
 }
 
 .player.rock {
-  background-image: url(../assets/hand_rock.png);
+  background-image: url(hand_rock.png);
 }
 
 .player.paper {
-  background-image: url(../assets/hand_paper.png);
+  background-image: url(hand_paper.png);
 }
 
 .player.scissors {
-  background-image: url(../assets/hand_scissors.png);
+  background-image: url(hand_scissors.png);
 }
 
 .player.shake {
-  background-image: url(../assets/hand_rock.png);
+  background-image: url(hand_rock.png);
   transform-origin: left center;
   animation: shake 1.8s ease-in 1 forwards;
 }
@@ -139,13 +139,13 @@ h1 {
 }
 
 button.rock {
-  background-image: url(../assets/button_rock.png);
+  background-image: url(button_rock.png);
 }
 
 button.paper {
-  background-image: url(../assets/button_paper.png);
+  background-image: url(button_paper.png);
 }
 
 button.scissors {
-  background-image: url(../assets/button_scissors.png);
+  background-image: url(button_scissors.png);
 }
